GLOVEUP/err.txt
evalmachine.<anonymous>:1885
    );
    ^

SyntaxError: missing ) after argument list
    at new Script (node:vm:117:7)
    at [eval]:1:128
    at runScriptInThisContext (node:internal/vm:219:10)
    at node:internal/process/execution:451:12
    at [eval]-wrapper:6:24
    at runScriptInContext (node:internal/process/execution:449:60)
    at evalFunction (node:internal/process/execution:283:30)
    at evalTypeScript (node:internal/process/execution:295:3)
    at node:internal/main/eval_string:71:3